--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">안녕하세요 TECH 융합인성(1)<br> 4조 포트폴리오입니다.</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">안녕하세요 TECH 융합인성<br> 4조 포트폴리오입니다.</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
