--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">
-                            외식학과 2015826047 정태수<br>
-                            외식학과 2015626026 손정욱<br>
-                            소프트웨어학과 2015742054 박철오<br>
-                            기계메카트로닉스공학부 2015646038 손찬영<br>
+                            2015826047 정태수<br>
+                            2015626026 손정욱<br>
+                            2015742054 박철오<br>
+                            2015646038 손찬영<br>
                         </p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#topic">발표 시작합니다.</a>
                     </div>
