--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#topic">Topic</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contents">Contents</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#details">Details</a></li>
                     </ul>
                 </div>
@@ -42,10 +42,10 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">
-                            2015826047 정태수<br>
-                            2015626026 손정욱<br>
-                            2015742054 박철오<br>
-                            2015646038 손찬영<br>
+                            외식학과 2015826047 정태수<br>
+                            외식학과 2015626026 손정욱<br>
+                            소프트웨어학과 2015742054 박철오<br>
+                            기계메카트로닉스공학부 2015646038 손찬영<br>
                         </p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#topic">발표 시작합니다.</a>
                     </div>
@@ -60,49 +60,49 @@
                         <h2 class="text-white mt-0">Topic</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">지난 한학기동안 TECH융합인성을 이수하며 무엇을 체험하고 어떻게 느꼈을까요?</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#contents">목차를 알아봅시다!</a> 
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">목차를 알아봅시다!</a> 
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- contents -->
-        <section id="contents">
+        <!-- portfolio -->
+        <section id="portfolio">
             <div class="container-fluid p-0">
                 <h2 class="text-center mt-0" style="font-weight: 600; padding-top: 50px;">목 차</h2>
                 <hr class="divider my-4" />
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="contents-box" href="assets/img/portfolio/fullsize/1.jpg"
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                            <div class="contents-box-caption">
+                            <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Talent | Technique</div>
                                 <div class="project-name">인문학 강연 참여</div>
                             </div></a
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="contents-box" href="assets/img/portfolio/fullsize/2.jpg"
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
-                            <div class="contents-box-caption">
+                            <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Etiquette</div>
                                 <div class="project-name">부일영화상 참여</div>
                             </div></a
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="contents-box" href="assets/img/portfolio/fullsize/3.jpg"
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
-                            <div class="contents-box-caption">
+                            <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Charming</div>
                                 <div class="project-name">ANOTHER REALITY<br>밤의 미술관 전시회</div>
                             </div></a
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="contents-box" href="assets/img/portfolio/fullsize/4.jpg"
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
-                            <div class="contents-box-caption">
+                            <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Hope</div>
                                 <div class="project-name">신기술 포럼 참여</div>
                             </div></a
@@ -143,7 +143,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="./pages/etiquette.html">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
                             <div style="color: black;">
                                 <h3 class="h4 mb-2">Etiquette</h3>
                                 <p class="text-muted mb-0">부일영화상 참가</p>
