--- a/pages/charming.html
+++ b/pages/charming.html
@@ -57,7 +57,7 @@
                 <h1 class="mt-4" style="font-weight: 600;">ANOTHER REALITY : 밤의 미술관</h1>
                 <!-- Author -->
                 <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
-                    by <a href="https://www.instagram.com/cheeeo_ro">박철오</a>
+                    by <a href="https://www.instagram.com/cheeeo_ro">정태수</a>
                 </p>
                 <!-- Date/Time -->
                 <hr>
@@ -172,6 +172,9 @@
                                     <li>
                                         <a href="#">#전시회</a>
                                     </li>
+                                    <li>
+                                        <a href="#">#부산진구</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -182,7 +185,7 @@
                 <div class="card my-4">
                     <h5 class="card-header">Summary</h5>
                     <div class="card-body">
-                        You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                        요약내용이 들어갈 자리
                     </div>
                 </div><!-- /.Side Widget -->
             </div>
