--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -182,7 +182,7 @@
                 <div class="card my-4">
                     <h5 class="card-header">Summary</h5>
                     <div class="card-body">
-                        You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                        요약내용이 들어갈 자리
                     </div>
                 </div><!-- /.Side Widget -->
             </div>
