--- a/pages/hope.html
+++ b/pages/hope.html
@@ -57,7 +57,7 @@
                 <h1 class="mt-4" style="font-weight: 600;">신기술 포럼 참여</h1>
                 <!-- Author -->
                 <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
-                    by <a href="https://www.instagram.com/cheeeo_ro">박철오</a>
+                    by <a href="https://www.instagram.com/cheeeo_ro">손정욱</a>
                 </p>
                 <!-- Date/Time -->
                 <hr>
@@ -140,7 +140,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search for...">
                             <span class="input-group-append">
-                            <button class="btn btn-secondary" type="button">Go!</button>
+                                <button class="btn btn-secondary" type="button">Go!</button>
                             </span>
                         </div>
                     </div>
@@ -154,23 +154,20 @@
                             <div class="col-lg-6">
                                 <ul class="list-unstyled mb-0">
                                     <li>
-                                        <a href="#">#부일영화상</a>
+                                        <a href="#">#환경에너지</a>
                                     </li>
                                     <li>
-                                        <a href="#">#이인혜교수님</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">#언택트참여</a>
+                                        <a href="#">#부산벡스코</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul class="list-unstyled mb-0">
                                     <li>
-                                        <a href="#">#부산일보주관</a>
+                                        <a href="#">#박람회</a>
                                     </li>
                                     <li>
-                                        <a href="#">#너무이쁘십니다</a>
+                                        <a href="#">#환경소듕해</a>
                                     </li>
                                 </ul>
                             </div>
@@ -182,7 +179,7 @@
                 <div class="card my-4">
                     <h5 class="card-header">Summary</h5>
                     <div class="card-body">
-                        You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                        요약내용이 들어갈 자리
                     </div>
                 </div><!-- /.Side Widget -->
             </div>
