--- a/pages/tech.html
+++ b/pages/tech.html
@@ -58,7 +58,7 @@
         <!-- Author -->
         <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
           by
-          <a href="https://www.instagram.com/cheeeo_ro">박철오</a>
+          <a href="https://www.instagram.com/cheeeo_ro">손찬영</a>
         </p>
         <hr>
         <!-- Date/Time -->
@@ -189,7 +189,7 @@
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
           <div class="card-body">
-            You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+            요약내용이 들어갈 자리
           </div>
         </div>
 
