--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#topic">Topic</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Contents</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#details">Details</a></li>
                     </ul>
                 </div>
