--- a/pages/etiquette.html
+++ b/pages/etiquette.html
@@ -64,11 +64,11 @@
                 <p>Posted on October 26, 2020 at 09:05 PM</p>
                 <hr>
                 <!-- Preview Image -->
-                <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+                <img class="img-fluid rounded" src="../assets/img/portfolio/post/2-1.jpg" alt="">
                 <hr>
                 <!-- Post Content -->
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-                <p>2Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+                <p class="lead">2020년 10월 26일, TECH융합인성(1) 과목의 담당교수님이신 이인혜교수님께서 부일영화상에서의 진행을 맡으셔서 언택트 참여로 영화상에 참여하게 되었다.</p>
+                <p>부일영화상은 부산일보 주관으로 1958년부터 출범하여 지금까지 명목을 잇고 있는 국내 최초의 영화상인데, 생에 첫</p>
                 <p>3Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
                 <blockquote class="blockquote">
                     <p class="mb-0">4Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -182,14 +182,13 @@
                 <div class="card my-4">
                     <h5 class="card-header">Summary</h5>
                     <div class="card-body">
-                        요약내용이 들어갈 자리
+                        부일영화상은 1958년 출범한 국내 최초의 영화상이다.
                     </div>
                 </div><!-- /.Side Widget -->
             </div>
         </div> <!-- /.row -->
     </div> <!-- /.container -->
     
-
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container"><div class="small text-center text-muted">Copyright © 2020 KS_TECH융합인성(1)</div></div>
