--- a/pages/tech.html
+++ b/pages/tech.html
@@ -17,11 +17,14 @@
     <!-- Third party plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
-  <link href="../css/blog-post.css" rel="stylesheet">
-  <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="../css/styles.css" rel="stylesheet" />
+    <link href="../css/blog-post.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+    <!-- My Font -->
+    <link href="../css/font.css" rel="stylesheet">
+
   <style>
       .column{
         color:rgba(0, 0, 0, 0.7) !important;
@@ -49,12 +52,12 @@
     </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container" style="font-family: BMHANNA_11yrs; font-weight: 600;">
     <div class="row">
       <!-- Post Content Column -->
       <div class="col-lg-8">
         <!-- Title -->
-        <h1 class="mt-4" style="font-weight: 600;">인문학 강연 참여</h1>
+        <p class="mt-4" style="font-size: 40px;">사는 게 재미없는 이 시대 남자들에게</p>
         <!-- Author -->
         <p class="lead" style="font-weight: 600; position: relative; left: 88%;">
           by
@@ -62,26 +65,59 @@
         </p>
         <hr>
         <!-- Date/Time -->
-        <p>Posted on September 23, 2020 at 07:25 PM</p>
+        <p style="font-size: 18px;">Posted on September 23, 2020 at 07:25 PM</p>
         <hr>
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="../assets/img/portfolio/post/1-1.jpg" alt="">
         <hr>
         <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+        
         <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
+          <p class="mb-0" style="font-size: 21px;">사는게 재미없는 이 시대의 남자들과 그 가족들에게 힘이 되어 드리겠습니다.</p>
+          <footer class="blockquote-footer">
+            <cite title="Source Title">김정운교수</cite>
           </footer>
         </blockquote>
+        
+        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 28px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
+          행복이라는 단어가 가장 기본적인 단어이지만 정작 직접 사용하는 경우는 없고<br> 책이나 인터넷에서 무심하게 지나가는 경우가 많기 때문이다. <br>
+          처음 주제 중에서 눈에 띄었던 것은 심리학의 패러다임 변화에 관한 부분이었다. <br>
+          개인의 약점을 고치기보단 강점을 부각하여 약점을 같이 끌어올리라는 것이었다. <br>
+          대부분 사람은 약점을 보완하려고 고생하고 지체하지만, <br>
+          이 강연을 듣고 나서는 강점을 조금 더 끌어올리는 것에 노력해야겠다고 생각했다. <br>
+          또한 우연과 관련된 긍정적 해석학적 순환을 설명하면서 <br>
+          축제와 휴식이 중요하다는 부분도 인상 깊었다. <br>
+          한국과 외국의 일하는 모습을 비교해보면 한국은 일하는 시간이 휴식 시간보다 <br>
+          많을 수밖에 없고 외국은 워라밸*을 오래전부터 볼 수 있었다. <br>
+          요즘은 한국도 워라밸을 중요시하는 사람이 많아져 <br>
+          회사도 변화하는 추세이지만 취업한 친구들을 보면 <br>
+          아직은 더 변화 하는 것이 좋을 것 같다고 생각을 하였다.<br><br>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+          &nbsp; <span style="font-size: 28px;">이</span> 강연을 보면서 기억이 남았던 교수님의 일화나 문장은<br>
+          <span style="font-size: 28px;">'삶은 순서 바꾸기이다.'</span><br> 
+          <span style="font-size: 28px;">'독일 통일에 대한 비화',</span><br>
+          <span style="font-size: 28px;">'한 시대를 발전시켰던 동력이 다음 시대의 발목을 잡는다'</span><br>
+           <span style="font-size: 28px;">'재미없는 삶은 무효다.'</span><br>
+          라는 것들이 크게 마음에 와닿았고 기억에 남았다. <br>
+          특히 역사의 변증법을 설명할 때 부모님이 꼭 한 번쯤 하셨고 <br>많이 들은 말은 <span style="font-size: 28px;"></span>'근면, 성실한 사람이 성공한다는 것이었다.'</span><br>
+          하지만 김정운 교수님은 근면, 성실이라는 수단적 가치가<br>
+          지금 한국사회의 문제라는 것이다. <br>
+          이제는 근면, 성실이라는 단어로 기업에만 지속 가능한 경영만을 제공하는 것이 아닌 <br>궁극적 가치인 근로자의 재미와 행복을 보장하고 근로자들이 지속 가능한 삶, <br>
+          한마디로 워라밸을 제공하는 것이 중요하고 근로자들도 추구해야 한다고 말씀하셨다. <br><br>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+          &nbsp; <span style="font-size: 28px;">나</span>는 회사가 근로자들의 워라밸을 충분히 보장해 준다면<br>
+          회사와 근로자들이 모두 만족할만한 성과와 기업에 있어 <br>
+          장기적으로 더 좋은 성장이 될 것으로 생각한다.<br>
+          이번 강연을 보면서 이때까지는 부모님들 말처럼<br>
+          '그냥 열심히만 하면 성공할 수 있다.'라는 생각에서<br>
+          '내가 잘하고 좋아하는 것을 열심히 그리고 즐겁게 해보자.'라고 생각하게 되었다. <br>
+          무엇보다 막상 쉬려면 주저하는 경우가 많았지만,<br>
+          김정운 교수님의 강연을 보고 휴식도 꼭 필요한 하나의 공부라고 생각하고<br>
+          이 강연을 계기로 내가 조금 더 자신감을 가지고<br>
+          나 자신을 좋아하게 되는 계기가 되었으면 좋겠다.<br><br>
+        </p>
 
+        <p style="font-size: 18px;">1) 워라밸(Work and Life Balance) : 일과 삶의 균형을 중요시하는 모습</p>
         <hr>
 
         <!-- Comments Form -->
@@ -92,7 +128,7 @@
               <div class="form-group">
                 <textarea class="form-control" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
             </form>
           </div>
         </div>
@@ -188,8 +224,9 @@
         <!-- Side Widget -->
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
-          <div class="card-body">
-            요약내용이 들어갈 자리
+          <div class="card-body" style="font-size: 15px;">
+            코로나 시대에 오프라인 인문학 강연 참여가 힘들었기에 유튜브를 활용하여 인문학 강연을 참여하게 되었는데,
+            많은 생각을 하게 되었다.
           </div>
         </div>
 
