E added posting and T added Comment

--- a/pages/hope.html
+++ b/pages/hope.html
@@ -68,7 +68,7 @@
         <p style="font-size: 18px;">Posted on November 15, 2020 at 11:13 AM</p>
         <hr>
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="../assets/img/portfolio/post/2-1.jpg" alt="">
+        <img class="img-fluid rounded" src="http://via.placeholder.com/900x300" alt="">
         <hr>
         <!-- Post Content -->
         <br>
@@ -217,7 +217,7 @@
         <!-- Side Widget -->
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
-          <div class="card-body" style="font-size: 15px;">
+          <div class="card-body" style="font-size: 18px;">
             요약 내용이 들어갈 자리
           </div>
         </div>
