--- a/pages/tech.html
+++ b/pages/tech.html
@@ -135,10 +135,19 @@
 
         <!-- Single Comment -->
         <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <img class="d-flex mr-3 rounded-circle" src="../assets/img/portfolio/profile/co_profile.jpg" alt="">
           <div class="media-body">
-            <h5 class="mt-0">Commenter Name1</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <p class="mt-0" style="font-size: 36px; margin-bottom: 0px;">박철오</p>
+            <p style="font-size: 21px;">
+              저도 이 영상을 보며 많은걸 느꼈습니다. 제게 가장 와 닿았던 교수님의 말씀은<br>
+              '행복이란, 하루의 삶 속에서 기분 좋은 시간이 길면 길수록 행복한 것이다.
+              기분이 좋으려면 좋아하는 것을 구체적으로 정의해라.' 그리고 '지금 행복한 사람이 나중에도 행복해진다. 행복한게 무엇인지 알기 때문이다.'
+              였습니다. 이 말을 듣고 나서 당장 생각을 해보았습니다.
+              '내가 좋아하는 것이 구체적으로 무엇인가..' 아직 정확히 떠오르지가 않았습니다.
+              생각을 거듭한 끝에 마음을 정리하였습니다. 
+              '반드시 매 순간 행복할 필요는 없다. 행복한 순간은 반드시 온다. 그 순간을 잘 잡아서 내가 무엇을 하면 좋아하는지 알아보자.'
+              이 생각을 마음에 깊은 곳에 보관하여 기분 좋은 시간을 늘려가며 행복하게 살아야겠다고 다짐하게 되었습니다.
+            </p>
           </div>
         </div>
 
@@ -224,7 +233,7 @@
         <!-- Side Widget -->
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
-          <div class="card-body" style="font-size: 15px;">
+          <div class="card-body" style="font-size: 18px;">
             코로나 시대에 오프라인 인문학 강연 참여가 힘들었기에 유튜브를 활용하여 인문학 강연을 참여하게 되었는데,
             많은 생각을 하게 되었다.
           </div>
