--- a/pages/hope.html
+++ b/pages/hope.html
@@ -72,47 +72,35 @@
         <hr>
         <!-- Post Content -->
         <br>
-        <p style="font-size: 21px;"> &nbsp; <span style="font-size: 36px;">시</span>작부터 남자의 행복이라는 단어가 떠올랐을 때 조금 어색했다. <br>
-          행복이라는 단어가 가장 기본적인 단어이지만 정작 직접 사용하는 경우는 없고<br> 책이나 인터넷에서 무심하게 지나가는 경우가 많기 때문이다. <br>
-          처음 주제 중에서 눈에 띄었던 것은 심리학의 패러다임 변화에 관한 부분이었다. <br>
-          개인의 약점을 고치기보단 강점을 부각하여 약점을 같이 끌어올리라는 것이었다. <br>
-          대부분 사람은 약점을 보완하려고 고생하고 지체하지만, <br>
-          이 강연을 듣고 나서는 강점을 조금 더 끌어올리는 것에 노력해야겠다고 생각했다. <br>
-          또한 우연과 관련된 긍정적 해석학적 순환을 설명하면서 <br>
-          축제와 휴식이 중요하다는 부분도 인상 깊었다. <br>
-          한국과 외국의 일하는 모습을 비교해보면 한국은 일하는 시간이 휴식 시간보다 <br>
-          많을 수밖에 없고 외국은 워라밸*을 중요시 여기는 모습을 오래전부터 볼 수 있었다. <br>
-          요즘은 한국도 워라밸을 중요시하는 사람이 많아져 <br>
-          회사도 변화하는 추세이지만 취업한 친구들을 보면 <br>
-          아직은 더 변화 하는 것이 좋을 것 같다고 생각을 하였다.<br><br>
+        <p style="font-size: 21px;">
+        &nbsp; <span style="font-size: 36px;">T</span>HEC 융합인성 조별과제 수행 차 11월 11일에<br>
+        부산 해운대 벡스코에서 열린 국제환경에너지 산업전 박람회를 다녀왔다.<br>
+        국제환경에너지 산업전 박람회는 국내 최초, 최대의 환경, 에너지 통합 전시회이자<br>
+        신재생에너지 보급과 산업 육성을 목적으로 하는 전시회이다. <br>
+        수질 환경, 대기환경, 폐기물처리, 측정분석기기, 전력/발전&가스, 신재생에너지,<br>
+        에너지 효율화, 태양광(열), 풍력에너지 등을 주제로 한 전시품목들이 전시되어있었다.<br><br>
 
-          &nbsp; <span style="font-size: 36px;">이</span> 강연을 보면서 기억이 남았던 교수님의 일화나 문장은<br>
-          <span style="font-size: 28px;">'삶은 순서 바꾸기이다.'</span><br> 
-          <span style="font-size: 28px;">'독일 통일에 대한 비화',</span><br>
-          <span style="font-size: 28px;">'한 시대를 발전시켰던 동력이 다음 시대의 발목을 잡는다'</span><br>
-           <span style="font-size: 28px;">'재미없는 삶은 무효다.'</span><br>
-          라는 것들이 크게 마음에 와닿았고 기억에 남았다. <br>
-          특히 역사의 변증법을 설명할 때 부모님이 꼭 한 번쯤 하셨고 <br>많이 들은 말은 <span style="font-size: 28px;"></span>'근면, 성실한 사람이 성공한다는 것이었다.'</span><br>
-          하지만 김정운 교수님은 근면, 성실이라는 수단적 가치가<br>
-          지금 한국사회의 문제라는 것이다. <br>
-          이제는 근면, 성실이라는 단어로 기업에만 지속 가능한 경영만을 제공하는 것이 아닌 <br>궁극적 가치인 근로자의 재미와 행복을 보장하고 근로자들이 지속 가능한 삶, <br>
-          한마디로 워라밸을 제공하는 것이 중요하고 근로자들도 추구해야 한다고 말씀하셨다. <br><br>
-
-          &nbsp; <span style="font-size: 36px;">나</span>는 회사가 근로자들의 워라밸을 충분히 보장해 준다면<br>
-          회사와 근로자들이 모두 만족할만한 성과와 기업에 있어 <br>
-          장기적으로 더 좋은 성장이 될 것으로 생각한다.<br>
-          이번 강연을 보면서 이때까지는 부모님들 말처럼<br>
-          '그냥 열심히만 하면 성공할 수 있다.'라는 생각에서<br>
-          '내가 잘하고 좋아하는 것을 열심히 그리고 즐겁게 해보자.'라고 생각하게 되었다. <br>
-          무엇보다 막상 쉬려면 주저하는 경우가 많았지만,<br>
-          김정운 교수님의 강연을 보고 휴식도 꼭 필요한 하나의 공부라고 생각하고<br>
-          이 강연을 계기로 내가 조금 더 자신감을 가지고<br>
-          나 자신을 좋아하게 되는 계기가 되었으면 좋겠다.<br><br>
-        </p>
-
-        <p style="font-size: 18px;">1) 워라밸(Work and Life Balance) : 일과 삶의 균형을 중요시하는 모습</p>
-        <hr>
-
+        &nbsp; <span style="font-size: 36px;">이</span>번 전시회를 다녀와서 느꼈던 점은 우리가 일상생활에서 당연하게 여겼던 것들 <br>
+        예를 들면 수도꼭지를 열면 나오는 수돗물과 같은 것들이 환경에너지와 연관이 되어있음을 <br>
+        또 우리 사회 곳곳에 환경에너지와 연관이 되어있음을 느꼈다. <br>
+        수질 환경과 관련해서 분쇄 이물질 선별기라는 것이 있었다. <br>
+        이것은 바이오가스 플랜트나 하수처리장에서<br>
+         절단 비중이 높은 철이나 돌맹이를 선별하는 기계였는데 <br>
+        이 기계가 지금 현재 하수처리장에서 이용하고 있는지에 대한 설명이 없었지만,<br>
+        우리가 지금 이용하는 수돗물 또한 이런 기계들을 이용해서 불순물들을 제거할 거라고 생각을 했다.<br><br>
+       
+        &nbsp; <span style="font-size: 36px;">또</span> 한 가지 인상 깊었던 것은 재활용과 관련한 라미네이팅 기술이었다. <br>
+        라미네이팅 기술이란 코르크 나무 껍질 등을 이용하여 식물성 가죽을 만드는 것인데 <br>
+        버켄스탁의 코르크 샌들과 같은 것이라고 생각하면 쉬울 것 같다. <br>
+        엘엔제이라는 회사에서는 단순히 샌들에 한정적이지 않고<br>
+        가방, 폰 케이스, 지갑 등을 만들어 전시를 해두었다. <br>
+        이 환경과 관련된 라미네이팅 기술이 지금 우리의 패션에도 영향을 끼치고 있음을 느꼈고 <br>
+        나중에는 패션 뿐 아니라 인테리어 등 다양한 생활에 침투할 거 같은 느낌을 받았다.<br><br>
+       
+        &nbsp; <span style="font-size: 36px;">끝</span>으로 우리 생활에 환경, 에너지 기술이 곳곳에 침투, 활용되고 있다는 것을 느꼈고 <br>
+        그래서 더욱 이런 산업과 기술에 중요성을 부각하고 개발을 시도하려고 했던 것이 아닐까 생각했고<br>
+        관심을 가지지는 않았지만 앞으로는 이런 기술과 산업에도 꾸준히 관심을 가지는 것이 중요할 거라고 생각했다.<br><br>
+      </p>
         <!-- Comments Form -->
         <div class="card my-4">
           <h5 class="card-header">Leave a Comment:</h5>
@@ -192,9 +180,6 @@
                   <li>
                     <a href="#">#부산_벡스코</a>
                   </li>
-                  <li>
-                    <a href="#">#KT&G</a>
-                  </li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -203,10 +188,7 @@
                     <a href="#">#박람회</a>
                   </li>
                   <li>
-                    <a href="#">#환경은소듕해</a>
-                  </li>
-                  <li>
-                    <a href="#">#상상마당</a>
+                    <a href="#">#소중한환경</a>
                   </li>
                 </ul>
               </div>
@@ -218,7 +200,7 @@
         <div class="card my-4">
           <h5 class="card-header">Summary</h5>
           <div class="card-body" style="font-size: 18px;">
-            요약 내용이 들어갈 자리
+            11월 11일 부산 해운대 벡스코에서 개최한 국제환경에너지 산업전 박람회를 다녀왔다.
           </div>
         </div>
 
