--- a/pages/hope.html
+++ b/pages/hope.html
@@ -68,38 +68,51 @@
         <p style="font-size: 18px;">Posted on November 15, 2020 at 11:13 AM</p>
         <hr>
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://via.placeholder.com/900x300" alt="">
+        <img class="img-fluid rounded" src="../assets/img/portfolio/post/4-1.jpg" alt="">
         <hr>
         <!-- Post Content -->
         <br>
         <p style="font-size: 21px;">
-        &nbsp; <span style="font-size: 36px;">T</span>HEC 융합인성 조별과제 수행 차 11월 11일에<br>
-        부산 해운대 벡스코에서 열린 국제환경에너지 산업전 박람회를 다녀왔다.<br>
-        국제환경에너지 산업전 박람회는 국내 최초, 최대의 환경, 에너지 통합 전시회이자<br>
-        신재생에너지 보급과 산업 육성을 목적으로 하는 전시회이다. <br>
-        수질 환경, 대기환경, 폐기물처리, 측정분석기기, 전력/발전&가스, 신재생에너지,<br>
-        에너지 효율화, 태양광(열), 풍력에너지 등을 주제로 한 전시품목들이 전시되어있었다.<br><br>
+        &nbsp; <span style="font-size: 36px;">T</span>HEC 융합인성 조별과제 수행 차<br>
+        11월 11일에 부산 해운대 벡스코에서 열린<br>
+        국제환경에너지 산업전 박람회를 다녀왔다.<br><br>
+        <span style="font-size: 28px;">국제환경에너지 산업전 박람회는<br>
+        국내 최초, 최대의 환경, 에너지 통합 전시회이자<br>
+        신재생에너지 보급과 산업 육성을 목적으로 하는 전시회이다. </span><br><br>
+        수질 환경, 대기환경, 폐기물처리, 측정분석기기, 전력/발전&가스,<br> 신재생에너지,
+        에너지 효율화, 태양광(열), 풍력에너지 등을<br> 주제로 한 전시품목들이 전시되어있었다.<br><br>
 
-        &nbsp; <span style="font-size: 36px;">이</span>번 전시회를 다녀와서 느꼈던 점은 우리가 일상생활에서 당연하게 여겼던 것들 <br>
-        예를 들면 수도꼭지를 열면 나오는 수돗물과 같은 것들이 환경에너지와 연관이 되어있음을 <br>
-        또 우리 사회 곳곳에 환경에너지와 연관이 되어있음을 느꼈다. <br>
-        수질 환경과 관련해서 분쇄 이물질 선별기라는 것이 있었다. <br>
+        &nbsp; <span style="font-size: 36px;">이</span>번 전시회를 다녀와서 느꼈던 점은<br>
+        우리가 일상생활에서 당연하게 여겼던 것들 <br>
+        예를 들면 수도꼭지를 열면 나오는 수돗물과 같은 것들이<br>
+        환경에너지와 연관이 되어있음을 <br>
+        또 우리 사회 곳곳에 환경에너지와 연관이 되어있음을 느꼈다.<br>
+        수질 환경과 관련해서 분쇄 이물질 선별기라는 것이 있었다.<br>
         이것은 바이오가스 플랜트나 하수처리장에서<br>
          절단 비중이 높은 철이나 돌맹이를 선별하는 기계였는데 <br>
-        이 기계가 지금 현재 하수처리장에서 이용하고 있는지에 대한 설명이 없었지만,<br>
-        우리가 지금 이용하는 수돗물 또한 이런 기계들을 이용해서 불순물들을 제거할 거라고 생각을 했다.<br><br>
+        이 기계가 지금 현재 하수처리장에서<br>
+        이용하고 있는지에 대한 설명이 없었지만,<br>
+        우리가 지금 이용하는 수돗물 또한 이런 기계들을 이용해서<br>
+        불순물들을 제거할 거라고 생각을 했다.<br><br>
        
-        &nbsp; <span style="font-size: 36px;">또</span> 한 가지 인상 깊었던 것은 재활용과 관련한 라미네이팅 기술이었다. <br>
-        라미네이팅 기술이란 코르크 나무 껍질 등을 이용하여 식물성 가죽을 만드는 것인데 <br>
+        &nbsp; <span style="font-size: 36px;">또</span> 한 가지 인상 깊었던 것은<br>
+        재활용과 관련한 라미네이팅 기술이었다. <br>
+        라미네이팅 기술이란 코르크 나무 껍질 등을 이용하여<br>
+        식물성 가죽을 만드는 것인데, <br>
         버켄스탁의 코르크 샌들과 같은 것이라고 생각하면 쉬울 것 같다. <br>
         엘엔제이라는 회사에서는 단순히 샌들에 한정적이지 않고<br>
         가방, 폰 케이스, 지갑 등을 만들어 전시를 해두었다. <br>
-        이 환경과 관련된 라미네이팅 기술이 지금 우리의 패션에도 영향을 끼치고 있음을 느꼈고 <br>
-        나중에는 패션 뿐 아니라 인테리어 등 다양한 생활에 침투할 거 같은 느낌을 받았다.<br><br>
+        이 환경과 관련된 라미네이팅 기술이<br>
+        지금 우리의 패션에도 영향을 끼치고 있음을 느꼈고 <br>
+        나중에는 패션 뿐 아니라 인테리어 등<br>
+        다양한 생활에 침투할 거 같은 느낌을 받았다.<br><br>
        
-        &nbsp; <span style="font-size: 36px;">끝</span>으로 우리 생활에 환경, 에너지 기술이 곳곳에 침투, 활용되고 있다는 것을 느꼈고 <br>
-        그래서 더욱 이런 산업과 기술에 중요성을 부각하고 개발을 시도하려고 했던 것이 아닐까 생각했고<br>
-        관심을 가지지는 않았지만 앞으로는 이런 기술과 산업에도 꾸준히 관심을 가지는 것이 중요할 거라고 생각했다.<br><br>
+        &nbsp; <span style="font-size: 36px;">끝</span>으로 우리 생활에 환경, 에너지 기술이 곳곳에<br>
+        침투, 활용되고 있다는 것을 느꼈고 <br>
+        그래서 더욱 이런 산업과 기술에 중요성을 부각하고<br>
+         개발을 시도하려고 했던 것이 아닐까 생각했고<br>
+        관심을 가지지는 않았지만 앞으로는 이런 기술과 산업에도<br>
+        꾸준히 관심을 가지는 것이 중요할 거라고 생각했다.<br><br>
       </p>
         <!-- Comments Form -->
         <div class="card my-4">
